--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -1074,7 +1074,7 @@ body .hide-desktop {
       -webkit-box-shadow: -0.4px 0.2px 5px 0.02px #42299A;
               box-shadow: -0.4px 0.2px 5px 0.02px #42299A;
       border-radius: 8px;
-      padding: .4rem 2rem 1.6rem;
+      padding: 0.4rem 2rem 1.6rem;
       width: 70%; }
       .page-template-page-team .site-content .entry-content .single-member .member-photo img {
         width: 15rem; }
@@ -1110,6 +1110,36 @@ body .hide-desktop {
       margin-top: 2.3rem; }
 
 .page-template-page-team .site-content .custom-plan .single-custom-plan:last-child {
+  display: none; }
+
+/* FAQ Page */
+.page-template-page-faq .entry-content .faqs .question {
+  height: 3rem;
+  border-bottom: 1px solid #14225F;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  .page-template-page-faq .entry-content .faqs .question .plus {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .page-template-page-faq .entry-content .faqs .question :after {
+    content: '\002B'; }
+
+.page-template-page-faq .entry-content .faqs .answer {
   display: none; }
 
 /*!
@@ -1740,7 +1770,7 @@ ol.flickity-page-dots {
           flex-direction: column; } }
   @media (min-width: 1000px) {
     .site-footer .top-footer {
-      width: 1200px;
+      max-width: 90%;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -1770,7 +1800,7 @@ ol.flickity-page-dots {
     display: none; }
     .site-footer .top-footer .footer-nav .menu-footer-menu-container ul {
       list-style: none;
-      padding-left: 3.5rem; }
+      padding-left: 6rem; }
       @media (min-width: 1000px) {
         .site-footer .top-footer .footer-nav .menu-footer-menu-container ul li {
           margin: 2rem 0;
@@ -1916,23 +1946,38 @@ ol.flickity-page-dots {
       height: 3rem;
       width: 3rem;
       margin: 0 1rem; }
-  .site-footer .bottom-footer {
-    width: 1200px; }
-    .site-footer .bottom-footer .footer-copyright {
-      -webkit-box-ordinal-group: 2;
-          -ms-flex-order: 1;
-              order: 1; }
-      .site-footer .bottom-footer .footer-copyright .footer-maple-leaf {
-        width: 5rem;
-        margin: 0 auto; }
+  @media (min-width: 1000px) {
+    .site-footer .bottom-footer {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -ms-flex-item-align: start;
+          align-self: flex-start; } }
+  .site-footer .bottom-footer .footer-copyright {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; }
+    @media (min-width: 1000px) {
+      .site-footer .bottom-footer .footer-copyright {
+        padding-left: 10.3rem; } }
+    .site-footer .bottom-footer .footer-copyright .footer-maple-leaf {
+      width: 5rem;
+      margin: 0 auto; }
+    .site-footer .bottom-footer .footer-copyright p {
+      text-align: center; }
       @media (min-width: 1000px) {
-        .site-footer .bottom-footer .footer-copyright {
-          padding-left: 3.5rem; } }
-      .site-footer .bottom-footer .footer-copyright p {
-        text-align: center; }
-        @media (min-width: 1000px) {
-          .site-footer .bottom-footer .footer-copyright p {
-            text-align: left; } }
+        .site-footer .bottom-footer .footer-copyright p {
+          text-align: left; } }
 
 .why-donate {
   display: -webkit-box;
